# HomeKitADK_program

./: .gitmodules  CMakeLists.txt  HAPOpenSSL.patch  README.md  apply_patch.sh  apply_patch_ble.sh  apply_patches.sh  provision.sh
.zed/: settings.json
LinuxHAP/: HAPPlatformBLEPeripheralManager+Init.h  HAPPlatformBLEPeripheralManager.c  HAPPlatformBLEPeripheralManager.cpp  HAPPlatformFakeExchange.cpp  HAPPlatformLinuxShared.h  replay_main.c
TemperatureSensor/: App.c  App.h  DB.c  DB.h  Main.c
